src/test/deca/context/valid/SansObjet/DeclVar-GE-boolean-int-int.deca
// Description:
//    Declaration of a boolean variable using >= operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    int y = 2; 
    boolean z = x >= y ; 
}
